tests/invalid_inputs/sema/index_with_pointer.cpp

int main() {
	int arr[5], *p;
	arr[p];
}
